@@ -82,7 +82,7 @@ public class JournalAbbreviationsTabViewModel implements PreferenceTabViewModel 
                 isFileRemovable.set(!newValue.isBuiltInListProperty().get());
                 abbreviations.bindBidirectional(newValue.abbreviationsProperty());
                 if (!abbreviations.isEmpty()) {
-                    currentAbbreviation.set(abbreviations.get(abbreviations.size() - 1));
+                    currentAbbreviation.set(abbreviations.getLast());
                 }
             } else {
                 isFileRemovable.set(false);
@@ -90,15 +90,15 @@ public class JournalAbbreviationsTabViewModel implements PreferenceTabViewModel 
                     currentAbbreviation.set(null);
                     abbreviations.clear();
                 } else {
-                    currentFile.set(journalFiles.get(0));
+                    currentFile.set(journalFiles.getFirst());
                 }
             }
         });
         journalFiles.addListener((ListChangeListener<AbbreviationsFileViewModel>) lcl -> {
             if (lcl.next()) {
                 if (!lcl.wasReplaced()) {
-                    if (lcl.wasAdded() && !lcl.getAddedSubList().get(0).isBuiltInListProperty().get()) {
-                        currentFile.set(lcl.getAddedSubList().get(0));
+                    if (lcl.wasAdded() && !lcl.getAddedSubList().getFirst().isBuiltInListProperty().get()) {
+                        currentFile.set(lcl.getAddedSubList().getFirst());
                     }
                 }
             }
